Do not set the gradient if there's none available

BUG: 440962